# example-python-package

./: pyproject.toml  readme.md
.github/workflows/: test.yml
src/profiler/: profiler.py
tests/: profiler_test.py
