[tool.poetry]
name = "profiler"
version = "0.1.0"
description = "Package profiling"
authors = ["MJ <micjjjj@onet.pl>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"